# esg-parsers

./: README.md  pyproject.toml
esg_parsers/: main.py  models.py
esg_parsers/chat/: criteria.json  input.txt  main.py  output.txt
esg_parsers/data/: request.csv
esg_parsers/parsers/: base.py  forbes.py  kommersant.py  super_base.py  vedomosti.py
esg_parsers/scraper/: scraper.py
esg_parsers/utils/: csv.py
